--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -113,7 +113,7 @@ bundle = false
   # recently updated posts settings
   # 最近更新文章设置
   [section.recentlyUpdated]
-    enable = true
+    enable = false
     rss = true
     days = 30
     maxCount = 10
