--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -155,7 +155,7 @@ bundle = false
 
   # whether to show link to Raw Markdown content of the content
   # 是否显示原始 Markdown 文档内容的链接
-  linkToMarkdown = true
+#  linkToMarkdown = true
   # configure the link to view source the post
   # 配置文章原始文件的链接
 #  linkToSource = "https://github.com/aantriono82/blog/blob/main/exampleSite/content/{path}"
