--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -21,7 +21,7 @@ dateFormat = "2006-01-02"
 images = ["/images/aan1.png"]
 # enable PWA
 # 开启 PWA 支持
-enablePWA = false
+enablePWA = true
 # license information
 # 许可协议信息 (支持 HTML 格式)
 license = '<a rel="license external nofollow noopener noreferrer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
@@ -182,7 +182,7 @@ bundle = false
   seriesNavigation = true
   # whether to enable last modified time
   # 是否启用最后修改时间
-  enableLastMod = true
+  # enableLastMod = true
   # whether to enable word count
   # 是否启用字数统计
   enableWordCount = true
@@ -327,7 +327,7 @@ bundle = false
     # http://www.alapi.cn/api/view/72
     # OR self-hosted: https://github.com/yhf7952/QrCodeApi
     Weixin = ""
-    Whatsapp = false
+    Whatsapp = true
     Xing = false
     Mastodon = true
   # PlantUML config
