--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -32,7 +32,7 @@ bundle = false
   name = "Aan Triono"
   email = "aantriono82@gmail.com"
   link = "https://www.aantriono.com"
-  avatar = "/images/avatar.png"
+  avatar = "/images/aan1.png"
   gravatarEmail = ""
 
 [image]
